--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
 h1 {
     text-align: center;
-    padding-top: 0.5em;
+    padding: 0.5em;
 }
