--- a/src/app/components/schedule/schedule.component.html
+++ b/src/app/components/schedule/schedule.component.html
@@ -1,1 +1,186 @@
 <h1>Schedule</h1>
+<div class="row justify-content-center pb-5">
+  <div class="card col-md-10 text-center">
+    <div class="card-body">
+      <div class="card-title mt-3 mb-4">
+        <h3>Friday, June 1</h3>
+      </div>
+      <div class="row justify-content-between px-5">
+        <div class="col-md-3 text-left">
+          <p style="color: #26547C">9:00 AM</p>
+        </div>
+        <div class="col-md-7 text-left">
+          <p>Check-In</p>
+        </div>
+        <div class="col-md-2 text-right">
+          <p class="text-muted">Sunrise Plaza</p>
+        </div>
+      </div>
+      <div class="row justify-content-between px-5">
+        <div class="col-md-3 text-left">
+          <p style="color: #26547C">10:00 AM</p>
+        </div>
+        <div class="col-md-7 text-left">
+          <p>Opening Ceremony</p>
+        </div>
+        <div class="col-md-2 text-right">
+          <p class="text-muted">Mesa Commons</p>
+        </div>
+      </div>
+      <div class="row justify-content-between px-5">
+        <div class="col-md-3 text-left">
+          <p style="color: #26547C">10:30 AM</p>
+        </div>
+        <div class="col-md-7 text-left">
+          <p>Hacking Starts</p>
+        </div>
+        <div class="col-md-2 text-right">
+          <p class="text-muted">Mesa Commons</p>
+        </div>
+      </div>
+      <div class="row justify-content-between px-5">
+        <div class="col-md-3 text-left">
+          <p style="color: #26547C">11:30 AM</p>
+        </div>
+        <div class="col-md-7 text-left">
+          <p>Intro to Sustainability workshop</p>
+        </div>
+        <div class="col-md-2 text-right">
+          <p class="text-muted">MC211 A/B</p>
+        </div>
+      </div>
+      <div class="row justify-content-between px-5">
+        <div class="col-md-3 text-left">
+          <p style="color: #26547C">12:05 PM</p>
+        </div>
+        <div class="col-md-7 text-left">
+          <p>Lunch</p>
+        </div>
+        <div class="col-md-2 text-right">
+          <p class="text-muted">Sunrise Plaza</p>
+        </div>
+      </div>
+      <div class="row justify-content-between px-5">
+        <div class="col-md-3 text-left">
+          <p style="color: #26547C">12:30 PM</p>
+        </div>
+        <div class="col-md-7 text-left">
+          <p>Track Workshop #1</p>
+        </div>
+        <div class="col-md-2 text-right">
+          <p class="text-muted">MC211 A/B</p>
+        </div>
+      </div>
+      <div class="row justify-content-between px-5">
+        <div class="col-md-3 text-left">
+          <p style="color: #26547C">12:30 PM</p>
+        </div>
+        <div class="col-md-7 text-left">
+          <p>Workshop #2</p>
+        </div>
+        <div class="col-md-2 text-right">
+          <p class="text-muted">MC211 A/B</p>
+        </div>
+      </div>
+      <div class="row justify-content-between px-5">
+        <div class="col-md-3 text-left">
+          <p style="color: #26547C">1:00 PM</p>
+        </div>
+        <div class="col-md-7 text-left">
+          <p>Workshop #3</p>
+        </div>
+        <div class="col-md-2 text-right">
+          <p class="text-muted">MC211 A/B</p>
+        </div>
+      </div>
+      <div class="row justify-content-between px-5">
+        <div class="col-md-3 text-left">
+          <p style="color: #26547C">1:30 PM</p>
+        </div>
+        <div class="col-md-7 text-left">
+          <p>Track Workshop #2</p>
+        </div>
+        <div class="col-md-2 text-right">
+          <p class="text-muted">MC211 A/B</p>
+        </div>
+      </div>
+      <div class="row justify-content-between px-5">
+        <div class="col-md-3 text-left">
+          <p style="color: #26547C">2:30 PM</p>
+        </div>
+        <div class="col-md-7 text-left">
+          <p>Track Workshop #3</p>
+        </div>
+        <div class="col-md-2 text-right">
+          <p class="text-muted">MC211 A/B</p>
+        </div>
+      </div>
+      <div class="row justify-content-between px-5">
+        <div class="col-md-3 text-left">
+          <p style="color: #26547C">3:30 PM</p>
+        </div>
+        <div class="col-md-7 text-left">
+          <p>Track Workshop #4</p>
+        </div>
+        <div class="col-md-2 text-right">
+          <p class="text-muted">MC211 A/B</p>
+        </div>
+      </div>
+      <div class="row justify-content-between px-5">
+        <div class="col-md-3 text-left">
+          <p style="color: #26547C">5:00 PM</p>
+        </div>
+        <div class="col-md-7 text-left">
+          <p>Breakout Room Open</p>
+        </div>
+        <div class="col-md-2 text-right">
+          <p class="text-muted">MC211 A/B</p>
+        </div>
+      </div>
+      <div class="row justify-content-between px-5">
+        <div class="col-md-3 text-left">
+          <p style="color: #26547C">7:00 PM</p>
+        </div>
+        <div class="col-md-7 text-left">
+          <p>Hacking Ends</p>
+        </div>
+        <div class="col-md-2 text-right">
+          <p class="text-muted">Mesa Commons</p>
+        </div>
+      </div>
+      <div class="row justify-content-between px-5">
+        <div class="col-md-3 text-left">
+          <p style="color: #26547C">7:00 PM</p>
+        </div>
+        <div class="col-md-7 text-left">
+          <p>Dinner</p>
+        </div>
+        <div class="col-md-2 text-right">
+          <p class="text-muted">Sunrise Plaza</p>
+        </div>
+      </div>
+      <div class="row justify-content-between px-5">
+        <div class="col-md-3 text-left">
+          <p style="color: #26547C">7:00 PM</p>
+        </div>
+        <div class="col-md-7 text-left">
+          <p>Judging Begins</p>
+        </div>
+        <div class="col-md-2 text-right">
+          <p class="text-muted">Mesa Commons</p>
+        </div>
+      </div>
+      <div class="row justify-content-between px-5">
+        <div class="col-md-3 text-left">
+          <p style="color: #26547C">8:30 PM</p>
+        </div>
+        <div class="col-md-7 text-left">
+          <p>Closing Ceremony</p>
+        </div>
+        <div class="col-md-2 text-right">
+          <p class="text-muted">Mesa Commons</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
