Added APIs componenet. Filled pages with content. Added fun gradient animation for background. Updated SCSS files.

--- a/src/app/components/live-home/live-home.component.html
+++ b/src/app/components/live-home/live-home.component.html
@@ -4,14 +4,14 @@
       <div class="card text-center">
         <div class="card-body">
           <h2 class="card-title">Network Name</h2>
-          <p class="card-text">[Insert network name here]</p>
+          <p class="text-muted">[Insert network name here]</p>
         </div>
       </div>
       <div class="card mt-3 text-center">
           <div class="card-body">
             <h2 class="card-title">Shirt Colors</h2>
             <div class="row justify-content-between m-0">
-              <div class="col-md-6 text-left">
+              <div class="col-md-6 text-left text-muted">
                 <p>Hacker</p>
               </div>
               <div class="col-md-6 text-right">
@@ -19,7 +19,7 @@
               </div>
             </div>
             <div class="row justify-content-between m-0">
-              <div class="col-md text-left">
+              <div class="col-md text-left text-muted">
                 <p>Mentor</p>
               </div>
               <div class="col-md text-right">
@@ -27,7 +27,7 @@
               </div>
             </div>
             <div class="row justify-content-between m-0">
-              <div class="col-md text-left">
+              <div class="col-md text-left text-muted">
                 <p>Volunteer</p>
               </div>
               <div class="col-md text-right">
@@ -35,7 +35,7 @@
               </div>
             </div>
             <div class="row justify-content-between m-0">
-              <div class="col-md text-left">
+              <div class="col-md text-left text-muted">
                 <p>Organizer</p>
               </div>
               <div class="col-md text-right">
@@ -47,7 +47,7 @@
       <div class="card text-center">
         <div class="card-body">
           <h3 class="card-title">Slack</h3>
-          <p>Get on our <a href="#" class="primary">MesaHacks Slack channel</a> to get the latest information for annoucements and workshops.
+          <p class="text-muted">Get on our <a href="#" class="primary">MesaHacks Slack channel</a> to get the latest information for annoucements and workshops.
           Use the link below to join.</p>
           <a href="#" class="btn secondary-bg" target="blank">Join MesaHacks 2018</a>
         </div>
@@ -55,10 +55,7 @@
       <div class="card mt-3 text-center">
           <div class="card-body">
             <h3 class="card-title">Devpost</h3>
-            <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="card-link">Card link</a>
-            <a href="#" class="card-link">Another link</a>
+            <p class="text-muted">We are using <a href="https://mesahacks.devpost.com/">Devpost</a> for hacking submissions. Make sure you submit your hack by 7:00 PM!</p>
           </div>
       </div>
     </div>
