--- a/src/app/components/prizes/prizes.component.scss
+++ b/src/app/components/prizes/prizes.component.scss
@@ -1,3 +1,11 @@
 div.row{
     margin: 2em 0;
 }
+
+.card-body > p {
+  font-size: 1.1rem;
+}
+
+.card-subtitle {
+  font-size: 0.9rem !important;
+}
