--- a/src/app/components/prizes/prizes.component.html
+++ b/src/app/components/prizes/prizes.component.html
@@ -1,48 +1,31 @@
 <h1>Prizes</h1>
-<div class="row justify-content-around">
-
-  <div class="card col-md-5" style="width: 18rem;">
+<div class="card-columns px-4 pb-5 text-center">
+  <div class="card">
     <div class="card-body">
-      <h5 class="card-title">Grand Prize</h5>
-      <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-      <a href="#" class="card-link">Card link</a>
-      <a href="#" class="card-link">Another link</a>
+      <h3 class="card-title">Grand Prize</h3>
+      <h6 class="card-subtitle mb-4 text-muted">Northrop Grumman</h6>
+      <p class="text-muted">The team with the best hack overall will win a $500 cash prize, provided by Northrup Grumman.</p>
     </div>
   </div>
-
-  <div class="card col-md-5" style="width: 18rem;">
+  <div class="card">
     <div class="card-body">
-      <h5 class="card-title">Second Place</h5>
-      <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-      <a href="#" class="card-link">Card link</a>
-      <a href="#" class="card-link">Another link</a>
+      <h3 class="card-title">Third Place</h3>
+      <h6 class="card-subtitle mb-4 text-muted">MesaHacks</h6>
+      <p class="text-muted">The team with the third best hack overall will win a $100 cash prize.</p>
     </div>
   </div>
-
-</div>
-
-<div class="row justify-content-around">
-
-  <div class="card col-md-5" style="width: 18rem;">
+  <div class="card">
     <div class="card-body">
-      <h5 class="card-title">Third Place</h5>
-      <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-      <a href="#" class="card-link">Card link</a>
-      <a href="#" class="card-link">Another link</a>
+      <h3 class="card-title">Second Place</h3>
+      <h6 class="card-subtitle mb-4 text-muted">MesaHacks</h6>
+      <p class="text-muted">The team with the second best hack overall will win a $200 cash prize.</p>
     </div>
   </div>
-
-  <div class="card col-md-5" style="width: 18rem;">
+  <div class="card">
     <div class="card-body">
-      <h5 class="card-title">Best Team</h5>
-      <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-      <a href="#" class="card-link">Card link</a>
-      <a href="#" class="card-link">Another link</a>
+      <h3 class="card-title">Best Team</h3>
+      <h6 class="card-subtitle mb-4 text-muted">MesaHacks</h6>
+      <p class="text-muted">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
     </div>
   </div>
-
 </div>
