--- a/src/app/components/map/map.component.html
+++ b/src/app/components/map/map.component.html
@@ -1,4 +1,5 @@
 <h1>Map</h1>
 <div style="height: 100vh">
-
+<input type="text" (keyup)="onNameKeyUp($event)">
+<button (click)="getMsg()">Get</button>
 </div>
