--- a/src/app/components/live-home/live-home.component.html
+++ b/src/app/components/live-home/live-home.component.html
@@ -1,12 +1,16 @@
 <h1>Welcome To MesaHacks 2018!</h1>
 <div class="home-content">
   <div class="card-columns px-4">
+
+      <!--NETWORK NAME CARD -->
       <div class="card text-center">
         <div class="card-body">
           <h2 class="card-title">Network Name</h2>
           <p class="card-text">[Insert network name here]</p>
         </div>
       </div>
+
+      <!-- SHIRT COLOR CARD -->
       <div class="card mt-3 text-center">
           <div class="card-body">
             <h2 class="card-title">Shirt Colors</h2>
@@ -44,6 +48,7 @@
             </div>
           </div>
         </div>
+      <!-- SLACK CARD -->
       <div class="card text-center">
         <div class="card-body">
           <h3 class="card-title">Slack</h3>
@@ -52,6 +57,8 @@
           <a href="#" class="btn secondary-bg" target="blank">Join MesaHacks 2018</a>
         </div>
       </div>
+
+      <!-- DEVPOST CARD -->
       <div class="card mt-3 text-center">
           <div class="card-body">
             <h3 class="card-title">Devpost</h3>
