--- a/src/app/components/navigation/navigation.component.html
+++ b/src/app/components/navigation/navigation.component.html
@@ -42,7 +42,7 @@
       <ul>
         <li>
           <a [routerLink]="['home']" routerLinkActive='router-link-active' href="#">Live Site Home
-            <span class="sr-only">(current)</span>
+            <!-- <span class="sr-only">(current)</span> -->
           </a>
         </li>
         <li>
