added media breakpoints for card columns. Added announcements card to live site home page

--- a/src/app/components/live-home/live-home.component.html
+++ b/src/app/components/live-home/live-home.component.html
@@ -1,15 +1,25 @@
 <h1>Welcome To MesaHacks 2018!</h1>
 <div class="home-content">
-  <div class="card-columns px-4">
+  <div class="row justify-content-center px-4">
+    <div class="col">
       <div class="card text-center">
+        <h3 class="card-header"><b>Annoucements</b></h3>
         <div class="card-body">
-          <h2 class="card-title">Network Name</h2>
+          <p>This is a sample annoucement.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="card-columns px-4">
+      <div class="card mt-4 text-center">
+        <div class="card-body">
+          <h3 class="card-title">Network Name</h3>
           <p class="text-muted">[Insert network name here]</p>
         </div>
       </div>
       <div class="card mt-3 text-center">
           <div class="card-body">
-            <h2 class="card-title">Shirt Colors</h2>
+            <h3 class="card-title">Shirt Colors</h3>
             <div class="row justify-content-between m-0">
               <div class="col-md-6 text-left text-muted">
                 <p>Hacker</p>
@@ -44,7 +54,7 @@
             </div>
           </div>
         </div>
-      <div class="card text-center">
+      <div class="card mt-4 text-center">
         <div class="card-body">
           <h3 class="card-title">Slack</h3>
           <p class="text-muted">Get on our <a href="#" class="primary">MesaHacks Slack channel</a> to get the latest information for annoucements and workshops.
