--- a/src/app/components/schedule/schedule.component.html
+++ b/src/app/components/schedule/schedule.component.html
@@ -9,10 +9,10 @@
         <div class="col-md-3 text-left">
           <p style="color: #26547C">9:00 AM</p>
         </div>
-        <div class="col-md-7 text-left">
+        <div class="col-md-4 text-left">
           <p>Check-In</p>
         </div>
-        <div class="col-md-2 text-right">
+        <div class="col-md-5 text-right">
           <p class="text-muted">Sunrise Plaza</p>
         </div>
       </div>
@@ -20,10 +20,10 @@
         <div class="col-md-3 text-left">
           <p style="color: #26547C">10:00 AM</p>
         </div>
-        <div class="col-md-7 text-left">
+        <div class="col-md-4 text-left">
           <p>Opening Ceremony</p>
         </div>
-        <div class="col-md-2 text-right">
+        <div class="col-md-5 text-right">
           <p class="text-muted">Mesa Commons</p>
         </div>
       </div>
@@ -31,10 +31,10 @@
         <div class="col-md-3 text-left">
           <p style="color: #26547C">10:30 AM</p>
         </div>
-        <div class="col-md-7 text-left">
+        <div class="col-md-4 text-left">
           <p>Hacking Starts</p>
         </div>
-        <div class="col-md-2 text-right">
+        <div class="col-md-5 text-right">
           <p class="text-muted">Mesa Commons</p>
         </div>
       </div>
@@ -42,10 +42,10 @@
         <div class="col-md-3 text-left">
           <p style="color: #26547C">11:30 AM</p>
         </div>
-        <div class="col-md-7 text-left">
+        <div class="col-md-4 text-left">
           <p>Intro to Sustainability workshop</p>
         </div>
-        <div class="col-md-2 text-right">
+        <div class="col-md-5 text-right">
           <p class="text-muted">MC211 A/B</p>
         </div>
       </div>
@@ -53,10 +53,10 @@
         <div class="col-md-3 text-left">
           <p style="color: #26547C">12:05 PM</p>
         </div>
-        <div class="col-md-7 text-left">
+        <div class="col-md-4 text-left">
           <p>Lunch</p>
         </div>
-        <div class="col-md-2 text-right">
+        <div class="col-md-5 text-right">
           <p class="text-muted">Sunrise Plaza</p>
         </div>
       </div>
@@ -64,120 +64,120 @@
         <div class="col-md-3 text-left">
           <p style="color: #26547C">12:30 PM</p>
         </div>
-        <div class="col-md-7 text-left">
+        <div class="col-md-4 text-left">
           <p>Track Workshop #1</p>
         </div>
-        <div class="col-md-2 text-right">
+        <div class="col-md-5 text-right">
           <p class="text-muted">MC211 A/B</p>
         </div>
       </div>
       <div class="row justify-content-between px-5">
-        <div class="col-md-3 text-left">
+        <div class="col-sm-3 text-left">
           <p style="color: #26547C">12:30 PM</p>
         </div>
-        <div class="col-md-7 text-left">
+        <div class="col-sm-4 text-left">
           <p>Workshop #2</p>
         </div>
-        <div class="col-md-2 text-right">
+        <div class="col-sm-5 text-right">
           <p class="text-muted">MC211 A/B</p>
         </div>
       </div>
       <div class="row justify-content-between px-5">
-        <div class="col-md-3 text-left">
+        <div class="col-sm-3 text-left">
           <p style="color: #26547C">1:00 PM</p>
         </div>
-        <div class="col-md-7 text-left">
+        <div class="col-sm-4 text-left">
           <p>Workshop #3</p>
         </div>
-        <div class="col-md-2 text-right">
+        <div class="col-sm-5 text-right">
           <p class="text-muted">MC211 A/B</p>
         </div>
       </div>
       <div class="row justify-content-between px-5">
-        <div class="col-md-3 text-left">
+        <div class="col-sm-3 text-left">
           <p style="color: #26547C">1:30 PM</p>
         </div>
-        <div class="col-md-7 text-left">
+        <div class="col-sm-4 text-left">
           <p>Track Workshop #2</p>
         </div>
-        <div class="col-md-2 text-right">
+        <div class="col-sm-5 text-right">
           <p class="text-muted">MC211 A/B</p>
         </div>
       </div>
       <div class="row justify-content-between px-5">
-        <div class="col-md-3 text-left">
+        <div class="col-sm-3 text-left">
           <p style="color: #26547C">2:30 PM</p>
         </div>
-        <div class="col-md-7 text-left">
+        <div class="col-sm-4 text-left">
           <p>Track Workshop #3</p>
         </div>
-        <div class="col-md-2 text-right">
+        <div class="col-sm-5 text-right">
           <p class="text-muted">MC211 A/B</p>
         </div>
       </div>
       <div class="row justify-content-between px-5">
-        <div class="col-md-3 text-left">
+        <div class="col-sm-3 text-left">
           <p style="color: #26547C">3:30 PM</p>
         </div>
-        <div class="col-md-7 text-left">
+        <div class="col-sm-4 text-left">
           <p>Track Workshop #4</p>
         </div>
-        <div class="col-md-2 text-right">
+        <div class="col-sm-5 text-right">
           <p class="text-muted">MC211 A/B</p>
         </div>
       </div>
       <div class="row justify-content-between px-5">
-        <div class="col-md-3 text-left">
+        <div class="col-sm-3 text-left">
           <p style="color: #26547C">5:00 PM</p>
         </div>
-        <div class="col-md-7 text-left">
+        <div class="col-sm-4 text-left">
           <p>Breakout Room Open</p>
         </div>
-        <div class="col-md-2 text-right">
+        <div class="col-sm-5 text-right">
           <p class="text-muted">MC211 A/B</p>
         </div>
       </div>
       <div class="row justify-content-between px-5">
-        <div class="col-md-3 text-left">
+        <div class="col-sm-3 text-left">
           <p style="color: #26547C">7:00 PM</p>
         </div>
-        <div class="col-md-7 text-left">
+        <div class="col-sm-4 text-left">
           <p>Hacking Ends</p>
         </div>
-        <div class="col-md-2 text-right">
+        <div class="col-sm-5 text-right">
           <p class="text-muted">Mesa Commons</p>
         </div>
       </div>
       <div class="row justify-content-between px-5">
-        <div class="col-md-3 text-left">
+        <div class="col-sm-3 text-left">
           <p style="color: #26547C">7:00 PM</p>
         </div>
-        <div class="col-md-7 text-left">
+        <div class="col-sm-4 text-left">
           <p>Dinner</p>
         </div>
-        <div class="col-md-2 text-right">
+        <div class="col-sm-5 text-right">
           <p class="text-muted">Sunrise Plaza</p>
         </div>
       </div>
       <div class="row justify-content-between px-5">
-        <div class="col-md-3 text-left">
+        <div class="col-sm-3 text-left">
           <p style="color: #26547C">7:00 PM</p>
         </div>
-        <div class="col-md-7 text-left">
+        <div class="col-sm-4 text-left">
           <p>Judging Begins</p>
         </div>
-        <div class="col-md-2 text-right">
+        <div class="col-sm-5 text-right">
           <p class="text-muted">Mesa Commons</p>
         </div>
       </div>
       <div class="row justify-content-between px-5">
-        <div class="col-md-3 text-left">
+        <div class="col-sm-3 text-left">
           <p style="color: #26547C">8:30 PM</p>
         </div>
-        <div class="col-md-7 text-left">
+        <div class="col-sm-4 text-left">
           <p>Closing Ceremony</p>
         </div>
-        <div class="col-md-2 text-right">
+        <div class="col-sm-5 text-right">
           <p class="text-muted">Mesa Commons</p>
         </div>
       </div>
