Converted jQuery countdown code to TS. Added upcoming event section to nav bar that dynamically analyzes JSON file with schedule to display events within a time-frame.

--- a/src/app/components/live-home/live-home.component.html
+++ b/src/app/components/live-home/live-home.component.html
@@ -5,7 +5,6 @@
       <div class="card text-center">
         <h3 class="card-header"><b>Annoucements</b></h3>
         <div class="card-body">
-          <p>This is a sample annoucement.</p>
         </div>
       </div>
     </div>
@@ -57,12 +56,11 @@
             </div>
           </div>
         </div>
-      <div class="card text-center">
       <!-- SLACK CARD -->
       <div class="card mt-4 text-center">
         <div class="card-body">
           <h3 class="card-title">Slack</h3>
-          <p class="text-muted">Get on our <a href="#" class="primary">MesaHacks Slack channel</a> to get the latest information for annoucements and workshops.
+          <p class="text-muted">Get on our <a href="https://mesahacks2018.slack.com" target="blank" class="primary">MesaHacks Slack channel</a> to get the latest information for annoucements and workshops.
           Use the link below to join.</p>
           <a href="#" class="btn secondary-bg" target="blank">Join MesaHacks 2018</a>
         </div>
@@ -75,5 +73,4 @@
             <p class="text-muted">We are using <a href="https://mesahacks.devpost.com/">Devpost</a> for hacking submissions. Make sure you submit your hack by 7:00 PM!</p>
           </div>
       </div>
-    </div>
   </div>
