--- a/src/app/components/navigation/navigation.component.html
+++ b/src/app/components/navigation/navigation.component.html
@@ -6,13 +6,13 @@
   <div id="countdown" class="mt-2 mb-3 px-3 text-center">
     <div class="row justify-content-center">
       <div class="col-4 p-0">
-        <p id="hours" class="font-lg"></p>
+        <p id="hours" class="font-lg">{{ hours }}</p>
       </div>
       <div class="col-4 p-0">
-        <p id="minutes" class="font-lg"></p>
+        <p id="minutes" class="font-lg">{{ minutes }}</p>
       </div>
       <div class="col-4 p-0">
-        <p id="seconds" class="font-lg"></p>
+        <p id="seconds" class="font-lg">{{ seconds }}</p>
       </div>
     </div>
     <div class="row justify-content-center">
@@ -27,9 +27,7 @@
       </div>
     </div>
   </div>
-  <span style="padding: 20px;">
-    <strong>GENERAL</strong>
-  </span>
+  <p>GENERAL</p>
     <ul>
       <li>
         <a [routerLink]="['home']" routerLinkActive='router-link-active' href="#">Live Site Home
@@ -52,4 +50,18 @@
         <a href="https://join.slack.com/t/cscmesa/shared_invite/enQtMzYwMzcyNTAyMjYzLWFjYTQ1OGE1OGI5NjUwYzg0MWMxN2JiNmY1MDU5YTlmYWJmNGVmMmZmMTdlNzkyNjE3MDYxYmRhZWMyOGM5ZDg" target="blank">Slack<i class="fas fa-external-link-alt pl-2"></i></a>
       </li>
     </ul>
+    <p>UPCOMING EVENTS</p>
+    <div id="upcoming" class="pt-2 mt-2 mb-3">
+      <div class="row justify-content-center">
+        <div class="col">
+          <span *ngFor="let item of textArr">
+            <span *ngIf="item.ISOTime < this.upcoming && item.ISOTime > this.past">
+              <p class="schedule-item mb-1">{{ item.Title }}</p>
+              <p class="schedule-item mb-1" style="font-size: 0.9rem">Time: {{ item.Time }}</p>
+              <p class="schedule-item mb-3" style="font-size: 0.9rem">Room: {{ item.Room }}</p>
+            </span>
+          </span>
+        </div>
+      </div>
+    </div>
 </nav>
