--- a/src/app/components/navigation/navigation.component.scss
+++ b/src/app/components/navigation/navigation.component.scss
@@ -38,7 +38,20 @@
     margin: 0;
     padding: 0;
   }
+
+  nav #upcoming {
+    background-color: darken($secondary-color, 8%);
+  }
+
+  .pl-20 {
+    padding-left: 20px
+  }
 }
+
+.schedule-item {
+  padding: 0 20px;
+}
+
 
 nav a{
   color: white;
