--- a/src/app/components/navigation/navigation.component.html
+++ b/src/app/components/navigation/navigation.component.html
@@ -54,8 +54,8 @@
     <div id="upcoming" class="pt-2 mt-2 mb-3">
       <div class="row justify-content-center">
         <div class="col">
-          <span *ngFor="let item of textArr">
-            <span *ngIf="item.ISOTime < this.upcoming && item.ISOTime > this.past">
+          <span *ngFor="let item of schedule">
+            <span *ngIf="item.msTime < upcoming && item.msTime > past">
               <p class="schedule-item mb-1">{{ item.Title }}</p>
               <p class="schedule-item mb-1" style="font-size: 0.9rem">Time: {{ item.Time }}</p>
               <p class="schedule-item mb-3" style="font-size: 0.9rem">Room: {{ item.Room }}</p>
