Countdown & Prize changes

--- a/src/app/components/prizes/prizes.component.html
+++ b/src/app/components/prizes/prizes.component.html
@@ -3,29 +3,49 @@
   <div class="card">
     <div class="card-body">
       <h3 class="card-title">Grand Prize</h3>
-      <h6 class="card-subtitle mb-4 text-muted">Northrop Grumman</h6>
-      <p class="text-muted">The team with the best hack overall will win a $500 cash prize, provided by Northrup Grumman.</p>
-    </div>
-  </div>
-  <div class="card">
-    <div class="card-body">
-      <h3 class="card-title">Third Place</h3>
-      <h6 class="card-subtitle mb-4 text-muted">MesaHacks</h6>
-      <p class="text-muted">The team with the third best hack overall will win a $100 cash prize.</p>
+      <h6 class="card-subtitle mb-4 text-muted">IEEE & MesaHacks</h6>
+      <p class="text-muted">The team with the best hack overall will win (5) $80 Amazon Gift Cards and (5) Google Home Mini's.
+                            Provided by IEEE and MesaHacks.
+      </p>
     </div>
   </div>
   <div class="card">
     <div class="card-body">
       <h3 class="card-title">Second Place</h3>
       <h6 class="card-subtitle mb-4 text-muted">MesaHacks</h6>
-      <p class="text-muted">The team with the second best hack overall will win a $200 cash prize.</p>
+      <p class="text-muted">The team with the second best hack overall will win (5) $60 Amazon Gift Cards.</p>
     </div>
   </div>
   <div class="card">
     <div class="card-body">
-      <h3 class="card-title">Best Team</h3>
+      <h3 class="card-title">Third Place</h3>
       <h6 class="card-subtitle mb-4 text-muted">MesaHacks</h6>
-      <p class="text-muted">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+      <p class="text-muted">The team with the third best hack overall will win (5) $25 Amazon Gift Cards.</p>
+    </div>
+  </div>
+  <div class="card">
+    <div class="card-body">
+      <h3 class="card-title">Best Hardware Hack</h3>
+      <h6 class="card-subtitle mb-4 text-muted">SHPE & MesaHacks</h6>
+      <p class="text-muted">The team with the best hardware hack will receive (5) Raspberry Pi 3's.</p>
+    </div>
+  </div>
+  <div class="card">
+    <div class="card-body">
+      <h3 class="card-title">Best Sustainable Hack</h3>
+      <h6 class="card-subtitle mb-4 text-muted">TerraMesa Club</h6>
+      <p class="text-muted">The team with the best hack that is centered around sustainability will win (5)
+                            mini quad-copter drones. Provided by the TerraMesa Club.
+      </p>
+    </div>
+  </div>
+  <div class="card">
+    <div class="card-body">
+      <h3 class="card-title">Twilio Quest Master</h3>
+      <h6 class="card-subtitle mb-4 text-muted">MesaHacks</h6>
+      <p class="text-muted">The two individuals who gather the most XP on TwilioQuest will each recieve
+                            a one-year license for the Axure software prototyping platform.
+      </p>
     </div>
   </div>
 </div>
