--- a/src/app/components/apis/apis.component.html
+++ b/src/app/components/apis/apis.component.html
@@ -10,7 +10,9 @@
   <div class="card text-center px-2">
     <div class="card-body">
       <h2 class="card-title">Twilio</h2>
-      <p class="text-left text-muted">Twilio allows easy sending and receiving SMS and MMS messages along with voice calls, VOIP and more.</p>
+      <p class="text-left text-muted">Twilio allows easy sending and receiving SMS and MMS messages along with voice calls, VOIP and more.<br>
+                                      Use promo code MESAHACKS for $25 of starting credit!
+      </p>
       <a href="https://www.twilio.com/" target="blank" class="btn secondary-bg">Link</a>
     </div>
   </div>
