--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,9 @@
 .content {
   padding-left: 300px;
 }
+@media (max-width: 760px){
+  .content{
+    padding-left: 0px;
+    min-width: 400px;
+  }
+}
