--- a/src/app/components/navigation/navigation.component.html
+++ b/src/app/components/navigation/navigation.component.html
@@ -1,10 +1,11 @@
 <div class="display-btn" (click)='toggleNav()' >
-    <span></span>
-    <span></span>
-    <span></span>
+  <span></span>
+  <span></span>
+  <span></span>
 </div>
-<nav [ngClass]=" navCollapsed ? 'visible': 'hide' "  >
-  <div (click)='toggleNav()' class="display-btn" >
+
+<nav [ngClass]=" navCollapsed ? 'visible': 'hide' " >
+  <div  class="display-btn" (click)='toggleNav()' >
     <span></span>
     <span></span>
     <span></span>
