--- a/src/app/components/apis/apis.component.html
+++ b/src/app/components/apis/apis.component.html
@@ -11,7 +11,7 @@
     <div class="card-body">
       <h2 class="card-title">Twilio</h2>
       <p class="text-left text-muted">Twilio allows easy sending and receiving SMS and MMS messages along with voice calls, VOIP and more.<br>
-                                      Use promo code MESAHACKS for $25 of starting credit!
+                                      Use promo code MesaHack2018 for $25 of starting credit!
       </p>
       <a href="https://www.twilio.com/" target="blank" class="btn secondary-bg">Link</a>
     </div>
