--- a/src/app/components/live-home/live-home.component.html
+++ b/src/app/components/live-home/live-home.component.html
@@ -1,10 +1,12 @@
 <h1>Welcome To MesaHacks 2018!</h1>
 <div class="home-content">
+  <!-- ANNOUNCEMENTS CARD -->
   <div class="row justify-content-center px-4">
     <div class="col">
       <div class="card text-center">
         <h3 class="card-header"><b>Annoucements</b></h3>
-        <div class="card-body">
+        <div class="card-body text-left">
+
         </div>
       </div>
     </div>
