--- a/src/app/components/prizes/prizes.component.html
+++ b/src/app/components/prizes/prizes.component.html
@@ -43,7 +43,7 @@
     <div class="card-body">
       <h3 class="card-title">Twilio Quest Master</h3>
       <h6 class="card-subtitle mb-4 text-muted">MesaHacks</h6>
-      <p class="text-muted">The two individuals who gather the most XP on TwilioQuest will each recieve
+      <p class="text-muted">The two individuals who gather the most XP on <a href="https://www.twilio.com/quest/welcome" target="blank">TwilioQuest</a> will each recieve
                             a one-year license for the Axure software prototyping platform.
       </p>
     </div>
