--- a/src/app/components/live-home/live-home.component.html
+++ b/src/app/components/live-home/live-home.component.html
@@ -4,9 +4,9 @@
   <div class="row justify-content-center px-4">
     <div class="col">
       <div class="card text-center">
-        <h3 class="card-header"><b>Annoucements</b></h3>
-        <div class="card-body text-left">
-
+        <h3 class="card-header"><b>Announcements</b></h3>
+        <div class="card-body text-center">
+          <p class="text-muted" style="font-size: 1.1rem; margin: 0;">{{ msg }}</p>
         </div>
       </div>
     </div>
@@ -62,9 +62,9 @@
       <div class="card mt-4 text-center">
         <div class="card-body">
           <h3 class="card-title">Slack</h3>
-          <p class="text-muted">Get on our <a href="https://mesahacks2018.slack.com" target="blank" class="primary">MesaHacks Slack channel</a> to get the latest information for annoucements and workshops.
+          <p class="text-muted">Get on our <a href="https://join.slack.com/t/cscmesa/shared_invite/enQtMzYwMzcyNTAyMjYzLWFjYTQ1OGE1OGI5NjUwYzg0MWMxN2JiNmY1MDU5YTlmYWJmNGVmMmZmMTdlNzkyNjE3MDYxYmRhZWMyOGM5ZDg" target="blank" class="primary">MesaHacks Slack channel</a> to get the latest information for annoucements and workshops.
           Use the link below to join.</p>
-          <a href="#" class="btn secondary-bg" target="blank">Join MesaHacks 2018</a>
+          <a href="https://join.slack.com/t/cscmesa/shared_invite/enQtMzYwMzcyNTAyMjYzLWFjYTQ1OGE1OGI5NjUwYzg0MWMxN2JiNmY1MDU5YTlmYWJmNGVmMmZmMTdlNzkyNjE3MDYxYmRhZWMyOGM5ZDg" class="btn secondary-bg" target="blank">Join MesaHacks 2018</a>
         </div>
       </div>
 
