--- a/src/app/components/navigation/navigation.component.scss
+++ b/src/app/components/navigation/navigation.component.scss
@@ -11,16 +11,16 @@
     left: 0;
     background-color: $secondary-color;
     overflow-x: hidden;
-    transition: left 0.3s linear;
+    transition: left 0.4s linear;
   }
 
-  
+
   @media (max-width: 760px) {
 
     .hide{
       left: -275px;
     }
-    
+
     .visible{
       left: 0;
     }
@@ -37,10 +37,10 @@
       z-index: 1;
     }
 
-  
+
     .display-btn span{
       height: 5px;
-      background-color: #444;
+      background-color: #fff;
       display: block;
       margin-bottom: 5px;
     }
