--- a/src/app/components/schedule/schedule.component.html
+++ b/src/app/components/schedule/schedule.component.html
@@ -1,6 +1,6 @@
 <h1>Schedule</h1>
-<div class="row justify-content-center pb-5">
-  <div class="card col-md-10 text-center">
+<div class="row justify-content-center pb-5 px-5">
+  <div class="card col-md-12 text-center">
     <div class="card-body">
       <div class="card-title mt-3 mb-4">
         <h3>Friday, June 1</h3>
