--- a/src/app/components/live-home/live-home.component.html
+++ b/src/app/components/live-home/live-home.component.html
@@ -15,8 +15,9 @@
       <!--NETWORK NAME CARD -->
       <div class="card mt-4 text-center">
         <div class="card-body">
-          <h3 class="card-title">Network Name</h3>
-          <p class="text-muted">[Insert network name here]</p>
+          <h3 class="card-title">Network Information</h3>
+          <p class="text-muted">Name: sdmesa</p>
+          <p class="text-muted">Password: <span class="pass" id="pass"><a (click)="passShow()">Click to show</a></span></p>
         </div>
       </div>
 
@@ -72,7 +73,15 @@
       <div class="card mt-3 text-center">
           <div class="card-body">
             <h3 class="card-title">Devpost</h3>
-            <p class="text-muted">We are using <a href="https://mesahacks.devpost.com/">Devpost</a> for hacking submissions. Make sure you submit your hack by 7:00 PM!</p>
+            <p class="text-muted">We are using <a href="https://mesahacks.devpost.com/">Devpost</a> for hacking submissions. Make sure you submit your hack by 7:30 PM!</p>
           </div>
+      </div>
+
+      <div class="card mt-3 text-center">
+        <div class="card-body">
+          <h3>TwilioQuest</h3>
+          <a href="https://www.twilio.com/quest/welcome" class="btn secondary-bg" target="blank">Start your quest</a>
+          <a href="https://www.twilio.com/quest/leaderboard/mesahacks-2018" class="btn secondary-bg" target="blank">Leaderboard</a>
+        </div>
       </div>
   </div>
